name:                xd
version:             0.1.0.0
synopsis:            X Display Manager
description:         @xd@ is a simple display manager for X11. Rather than
                     starting the X server on boot, @xd@ starts X servers
                     on-demand when requested from users logged in to a VT.
homepage:            https://github.com/traviswhitaker/xd
license:             MIT
license-file:        LICENSE
author:              Travis Whitaker
maintainer:          pi.boy.travis@gmail.com
 copyright:          Travis Whitaker 2016
category:            System
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable xd
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <5.0
                     , process
                     , unix
                     , X11
  hs-source-dirs:      src
  default-language:    Haskell2010
